docs: add SETUP.md (from-zero bootstrap) + make dev-env.sh cross-platform
- SETUP.md: fresh-environment guide a Claude Code session can follow end to end —
  git clone, install JDK 11 + Maven (macOS/Debian/Fedora), build, run tests, run the
  demo, where to continue, plus a troubleshooting table.
- dev-env.sh: now cross-platform (macOS Intel/ARM + Linux). Auto-detects JDK 11 for
  JAVA_HOME (pre-set JAVA_HOME -> macOS java_home/Homebrew -> javac on PATH -> common
  Linux JVM dirs), finds brew even when off PATH, and uses find (not bare globs) so it
  is safe when sourced under zsh.
- CLAUDE.md / ONBOARDING.md: drop macOS-only wording, point to SETUP.md.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>